# deep-learning-with-numpy

./: .gitignore  README.md  pyproject.toml
docs/: graphs.excalidraw
docs/perceptron/: graphs.excalidraw
src/: main.py  main_mlp.py  main_perceptron.py
src/data/: classification.py  linear_classification.py  regression.py
src/models/: mlp.py  perceptron.py
src/utils/: activations.py  losses.py  normalization.py  optimizers.py
src/visualization/: perceptron.py
