[tool.poetry]
name = "deep-learning-numpy"
version = "0.1.0"
description = "Deep learning models implementation using only numpy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "deep_learning_numpy"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
